# jpegwrapper

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_for_openjpeg.txt  README.md  all_build_gcc.bat  all_build_msvc.bat  build.sh  build_gcc.bat  build_jpeg_turbo.sh  build_jpeg_turbo_gcc.bat  build_jpeg_turbo_msvc.bat  build_msvc.bat  build_openjpeg.sh  build_openjpeg_gcc.bat  build_openjpeg_msvc.bat  make_mingw_makefile.bat  make_msvc_project.bat  make_unix_makefile.sh
CImg/: README.md
CImg/examples/: Makefile
CImg/resources/: compile_win_visualcpp.bat
cimgwrapper/: CMakeLists.txt  j2k_mem.h  jpeg_mem.cpp
cmake/: compiler_flag_overrides.cmake  config.cmake.in
cmake/Modules/: FindOpenJPEG.cmake  FindTurboJPEG.cmake
dependencies/: .gitignore  CMakeLists.txt  all_build_jpeg_turbo_msvc.bat  all_build_openjpeg_msvc.bat  build_jpeg_turbo.sh  build_jpeg_turbo_gcc.bat  build_jpeg_turbo_msvc.bat  build_openjpeg.sh  build_openjpeg_gcc.bat  build_openjpeg_msvc.bat
dependencies/cimg/: CMakeLists.txt
dependencies/libjpeg-turbo-windows-gcc-x86/lib/pkgconfig/: libjpeg.pc  libturbojpeg.pc
dependencies/libjpeg-turbo-windows-gcc-x86_64/lib/pkgconfig/: libjpeg.pc  libturbojpeg.pc
dependencies/libjpeg-turbo-windows-vc-x86-mt/lib/: jpeg-static.lib  jpeg-static_d.lib  jpeg.lib  jpeg_d.lib  turbojpeg-static.lib  turbojpeg-static_d.lib  turbojpeg.lib  turbojpeg_d.lib
dependencies/libjpeg-turbo-windows-vc-x86/lib/: jpeg-static.lib  jpeg-static_d.lib  jpeg.lib  jpeg_d.lib  turbojpeg-static.lib  turbojpeg-static_d.lib  turbojpeg.lib  turbojpeg_d.lib
dependencies/libjpeg-turbo-windows-vc-x86_64-mt/lib/: jpeg-static.lib  jpeg-static_d.lib  jpeg.lib  jpeg_d.lib  turbojpeg-static.lib  turbojpeg-static_d.lib  turbojpeg.lib  turbojpeg_d.lib
dependencies/libjpeg-turbo-windows-vc-x86_64/lib/: jpeg-static.lib  jpeg-static_d.lib  jpeg.lib  jpeg_d.lib  turbojpeg-static.lib  turbojpeg-static_d.lib  turbojpeg.lib  turbojpeg_d.lib
dependencies/openjpeg-windows-gcc-x86/lib/openjpeg-2.1/: OpenJPEGTargets.cmake
dependencies/openjpeg-windows-vc-x86-mt/lib/: openjp2.lib  openjp2_d.lib
dependencies/openjpeg-windows-vc-x86/lib/: openjp2.lib  openjp2_d.lib
dependencies/openjpeg-windows-vc-x86/lib/openjpeg-2.1/: OpenJPEGTargets-debug.cmake
dependencies/openjpeg-windows-vc-x86_64-mt/lib/: openjp2.lib  openjp2_d.lib
dependencies/openjpeg-windows-vc-x86_64/lib/: openjp2.lib  openjp2_d.lib
jpegwrapper/: CImgWrapper.h  CMakeLists.txt  image_matrix_types.cpp  image_matrix_types.h  j2k_mem.cpp  j2k_mem.h  j2k_mem_advance.h  jpeg_mem.cpp  jpeg_mem.h  jpeg_mem_advance.h  testCImg.cpp
libjpeg-turbo-windows-vc-x86/lib/: jpeg-static.lib  turbojpeg.lib
libjpeg-turbo-windows-vc-x86_64/lib/: jpeg-static.lib  turbojpeg-static.lib
openjpeg-windows-gcc-x86/lib/: libopenjp2.lib
openjpeg-windows-gcc-x86/lib/openjpeg-2.1/: OpenJPEGTargets-release.cmake
openjpeg-windows-gcc-x86_64/lib/: libopenjp2.lib
openjpeg-windows-gcc-x86_64/lib/openjpeg-2.1/: OpenJPEGTargets-release.cmake  OpenJPEGTargets.cmake
openjpeg-windows-vc-x86/lib/: openjp2-static.lib  openjp2.lib
openjpeg-windows-vc-x86_64/lib/: openjp2-static.lib  openjp2.lib
openjpeg-windows-vc-x86_64/lib/openjpeg-2.1/: OpenJPEGTargets-release.cmake
project.vs2015/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  jpegwrapper.sln
project.vs2015/jpegwrapper/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  jpegwrapper-static.vcxproj  jpegwrapper-static.vcxproj.filters  testCImg.vcxproj  testCImg.vcxproj.filters
test/: CMakeLists.txt  file_utilits.h  make_mingw_makefile.bat  make_msvc_project.bat  make_unix_makefile.sh  raii.h  testCImg.cpp
